feat: make body width to 100%

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>리버티미디어</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="width: 100%">
+    <div id="app" style="position: relative; width: 100%"></div>
   </body>
 </html>
